# mj-github

./: README.md
.github/workflows/: agents-ci.yml
pm-interview-prep/: .env.example  .gitignore  Howitworks.md  Howitworks.txt  README.md
pm-interview-prep/apps/agents/: README.md  pyproject.toml
pm-interview-prep/apps/agents/prompts/: evaluation.system.md  interview.system.md  scanner.system.md  summary.system.md
pm-interview-prep/apps/agents/src/agents/: __init__.py  config.py  contracts.py
pm-interview-prep/apps/agents/src/agents/agents/: __init__.py  _prompts.py  evaluator.py  interviewer.py  scanner.py  summary.py
pm-interview-prep/apps/agents/src/agents/cli/: scan.py  session.py
pm-interview-prep/apps/agents/src/agents/llm/: __init__.py  base.py  factory.py  gemini.py  mock.py
pm-interview-prep/apps/agents/src/agents/orchestrator/: __init__.py  session.py
pm-interview-prep/apps/agents/src/agents/server/: __init__.py  app.py  cli.py  factory.py  store.py
pm-interview-prep/apps/agents/src/agents/tools/: __init__.py  pdf_parse.py  pii.py  question_bank.py  taxonomy.py
pm-interview-prep/apps/agents/tests/: conftest.py  test_evaluator.py  test_http_api.py  test_interview_agent.py  test_orchestrator_e2e.py  test_pii.py  test_scanner.py  test_taxonomy.py
pm-interview-prep/apps/agents/tests/fixtures/: answers_alex.json  resume_alex.txt  resume_priya.txt
pm-interview-prep/apps/web/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
pm-interview-prep/apps/web/app/: globals.css  (+2 more)
pm-interview-prep/docs/: IMPLEMENTATION_PLAN.md  PRD.md
(+6 files in other folders)
